# reading-tip-library

./: .coveragerc  .env.test  .gitignore  .pylintrc  README.md  codecov.yml  log.html  output.xml  pyproject.toml  report.html  tasks.py
.github/workflows/: main.yml
Documentation/: definitionofdone.md
data/: test.database.sqlite
src/: config.py  index.py  initialize_database.py  robotLibrary.py  stub_io.py
src/entities/: tip.py
src/repositories/: tip_repository.py
src/services/: tipservice.py
src/tests/: repository_test.py  resource.robot  service_test.py  test.robot  test_add_tag.robot  test_add_tip.robot  test_cycle_filter.robot  test_help.robot  test_list_tip.robot  test_mark_favourite.robot  test_mark_read.robot  test_modify_tip.robot  test_remove_tip.robot  test_search_tip.robot  textui_test.py
src/tests/repositories/: tip_repository_test.py
src/tests/services/: tip_service_test.py
src/tests/textui/: textui_test.py
src/textui/: color_message.py  consoleio.py  menu.py
