[tool.poetry]
name = "reading-tip-library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
robotframework = "^4.1.2"
python-dotenv = "^0.19.2"
pytest-dotenv = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
